fixed z-index issues on maps page

--- a/frontend/src/components/Map/Maps.module.css
+++ b/frontend/src/components/Map/Maps.module.css
@@ -58,7 +58,7 @@
   position: fixed;
   top: 75px;
   background-color: #FFFFFF;
-  /* z-index: 1; */
+  z-index: 2;
   /* animation: mymove 1000ms; */
 }
 
@@ -189,6 +189,7 @@
 .maps_page_container {
   position: relative;
   top: 230px;
+  width: 1000px;
   /* width: 100vw; */
   /* height: 100vh; */
   display:flex;
@@ -216,11 +217,12 @@
 .reg_card {
   display: flex;
   flex-direction: row;
-  width: 750px;
+  width: 120%;
   height: 200px;
   border-radius: 15px 15px 15px 15px;
   margin: 20px 0px 20px 0px;
-  z-index: -1;
+  z-index: 1;
+
 }
 
 .reg_card:hover {
@@ -231,8 +233,7 @@
   flex-direction: column;
   justify-content: center;
   width: 50%;
-  padding: 10px;
-  z-index: -1;
+  padding: 20px;
 }
 
 .reg_card_info > p {
@@ -294,13 +295,13 @@
   width: 50%;
   right: 0;
   top: 175px;
-  z-index: -1;
+  z-index: 1;
 }
 
-.containerStyle {
+/* .containerStyle {
   width: 100%;
   height: 100%;
-};
+}; */
 
 
 /***************************/
